Update Gradle to 7.6.1 and Gradle test-retry to 1.5.2 (#354)
* Change gradle version to 7.6.1.

Signed-off-by: Filip Drobnjakovic <drobnjakovicfilip@gmail.com>

* Update gradle, gradle wrapper and plugin version.

Signed-off-by: Filip Drobnjakovic <drobnjakovicfilip@gmail.com>

* Uncomment test comments.

Signed-off-by: Filip Drobnjakovic <drobnjakovicfilip@gmail.com>

---------

Signed-off-by: Filip Drobnjakovic <drobnjakovicfilip@gmail.com>