@@ -34,7 +34,7 @@ buildscript {
 
     dependencies {
         classpath "org.opensearch.gradle:build-tools:${opensearch_version}"
-        classpath group: 'com.google.guava', name: 'guava', version: '30.1-jre'
+        classpath group: 'com.google.guava', name: 'guava', version: '31.1-jre'
         classpath 'org.ajoberstar:gradle-git:0.2.3'
     }
 }
@@ -49,7 +49,7 @@ plugins {
     id 'com.github.spotbugs' version '5.0.13'
     id "de.undercouch.download" version "4.0.4"
     id 'com.adarshr.test-logger' version '2.1.0'
-    id 'org.gradle.test-retry' version '1.3.1'
+    id 'org.gradle.test-retry' version '1.5.2'
     id 'com.diffplug.spotless' version '5.11.0'
 }
 
@@ -255,6 +255,8 @@ tasks.withType(Test) {
     jvmArgs('--add-opens=java.base/java.util.stream=ALL-UNNAMED')
     jvmArgs('--add-opens=java.base/sun.nio.fs=ALL-UNNAMED')
     jvmArgs('--add-opens=java.base/java.nio.file=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/java.util=ALL-UNNAMED')
 }
 
 task rcaTest(type: Test) {
